deployment-scripts/test/reelcruit-employer-fe/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: reelcruit-employer-test
  namespace: test
  labels:
    app: reelcruit-employer-test
spec:
  replicas: 2
  selector:
    matchLabels:
      app: reelcruit-employer-test
  template:
    metadata:
      labels:
        app: reelcruit-employer-test
    spec:
      containers:
        - name: reelcruit-test
          image:  reelcruitapp/reelcruit-employer-app
          # image:  reelcruitapp/reelcruit-employer-app:test
          ports:
            - containerPort: 3000

---
apiVersion: v1
kind: Service
metadata:
  name: reelcruit-employer-test-svc
  namespace: test
spec:
  type: NodePort
  ports:
    - name: http
      port: 3000
      targetPort: 3000
  selector:
    app: reelcruit-employer-test
